--- a/httpdocs/theme/flatui/less/startpage.less
+++ b/httpdocs/theme/flatui/less/startpage.less
@@ -160,6 +160,10 @@
 	    border: 0px;
 	    border-color: none;
 	}
+
+	a.tooltipuserplings{
+		cursor: pointer;
+	}
 }
 
 #featureProductsContainer{
@@ -257,4 +261,23 @@
 		}
 	}
 	
+}
+
+.tooltipuserplingscontainer{
+	.user{
+		display: block;
+		float: left;
+		text-align: center;
+		width: 60px;
+		overflow: hidden;
+		img{
+			width:40px; 
+			height:40px;
+			border:1px solid #ccc;
+			border-radius: 999px;
+		}		
+		.caption{
+			display: block;
+		}
+	}
 }
