--- a/application/modules/default/views/scripts/home/index-opendesktop.phtml
+++ b/application/modules/default/views/scripts/home/index-opendesktop.phtml
@@ -232,5 +232,6 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
     '    $(document).ready(function(){                                             
                 TooltipUser.setup("tooltipuser","right");
                 TooltipUser.setup("tooltipuserleft","left");             
+                TooltipUserPlings.setup("tooltipuserplings","right");
             });
         ');
