member pling_excluded

--- a/application/modules/default/views/scripts/user/aboutme.phtml
+++ b/application/modules/default/views/scripts/user/aboutme.phtml
@@ -157,7 +157,7 @@ $plingcatid = $config->settings->member->plingcat->id;
                                 </span>
                                 <br>
                                 <span class="page-views" style="color: red;">
-                                    <input type="checkbox" id="pling-excluded-checkbox" <?php echo $this->member->pling_excluded == 1 ? ' checked=\'checked\' ' : ''; ?> />  pling-excluded
+                                    <input type="checkbox" id="pling-excluded-checkbox" <?php echo $this->member->pling_excluded == 1 ? ' checked=\'checked\' ' : ''; ?> />  user-pling-excluded
                                 </span>
                                 <script>
                                     $('#delete-this').on('click', function (event) {
