--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -785,7 +785,7 @@ $this->projectplings = $projectplings->fetchPlingsForProject($this->product->pro
                                 $modelClone = new Default_Model_ProjectClone();
 
                                $this->moreProducts = $modelClone->fetchOrigins($this->product->project_id);
-                               $this->moreProductsTitle = 'Originals';
+                               $this->moreProductsTitle = 'Based on';
                                if (count($this->moreProducts) > 0) {
                                        echo $this->render('product/partials/productCloneFrom.phtml');
 
@@ -796,7 +796,7 @@ $this->projectplings = $projectplings->fetchPlingsForProject($this->product->pro
                                  
                               $this->moreProducts = $modelClone->fetchRelatedProducts($this->product->project_id);
                  
-                              $this->moreProductsTitle = 'Related products';
+                              $this->moreProductsTitle = 'Variants';
                               if (count($this->moreProducts) > 0) {                                
                                       echo $this->render('product/partials/productCloneFrom.phtml');
 
