--- a/httpdocs/theme/flatui/less/startpage.less
+++ b/httpdocs/theme/flatui/less/startpage.less
@@ -164,6 +164,18 @@
 	a.tooltipuserplings{
 		cursor: pointer;
 	}
+
+	.supportersrow{
+
+		  .imgpopover{        
+		        max-width: 200px;
+		        max-height: 160px;       
+		    }
+		    .profile-img-product{       
+		        display: block;
+		        margin: auto;
+		    }
+	}
 }
 
 #featureProductsContainer{
