--- a/application/modules/default/views/scripts/home/partials/plingprojects.phtml
+++ b/application/modules/default/views/scripts/home/partials/plingprojects.phtml
@@ -28,9 +28,25 @@
             <div class="user " >
                 <div class="u-wrap" style=" background-repeat: no-repeat; background-image: url('<?php echo $this->Image($p['image_small'], array('width' => '115', 'height' => '75', 'crop' => 2)); ?>');">                
                     <a href="<?php echo $this->buildProductUrl($p['project_id']); ?>" style="" >
-                        <figure style="padding-top: 50px">
-                            
-                            <img class="tooltipuser" data-tooltip-content="#tooltip_content" data-user="<?=$p['member_id']?>" src="<?php echo $this->Image($p['profile_image_url'], array('width' => '50', 'height' => '50', 'crop' => 2)); ?>" style="width:40px; height: 40px"/>
+                        <div  class="product-thumbnail-startpage " style="height: 50px;width: 115px;"
+                                 data-toggle="popover"
+                                 data-trigger="hover"
+                                 data-html="true"
+                                 data-placement="top"
+                                data-content="<div class='profile-img-product center'>
+                                     <img class='imgpopover'  src='<?php echo $this->Image($p['image_small'], array('width' => '200', 'height' => '160', 'crop' => 1)); ?>'/>
+                                     </div>
+                                       <div class='content'>
+                                           <div class='title'>
+                                               <p><?=Default_Model_HtmlPurify::purify($this->truncate($p['title'],20).' - '.$this->truncate($p['catTitle'],20) )?></p>
+                                           </div>                                                             
+                                       </div>">         
+                        </div>         
+                        <figure style="">                            
+                            <img class="tooltipuser" data-tooltip-content="#tooltip_content" data-user="<?=$p['member_id']?>" 
+                                    src="<?php echo $this->Image($p['profile_image_url'], array('width' => '50', 'height' => '50', 'crop' => 2)); ?>" 
+                                    style="width:40px; height: 40px"                                   
+                                    />
                         </figure>
                         <h3 class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><?php echo Default_Model_HtmlPurify::purify($p['username']); ?></h3>
                                                                   
@@ -45,3 +61,13 @@
     <div class="clearboth"></div> 
 </div>
 
+<script type="application/javascript">
+    // tool tips
+    $('body').on('mouseenter', '.product-thumbnail-startpage', function () {
+        $(this).popover('show');
+    });
+
+    $('body').on('mouseleave', '.product-thumbnail-startpage', function () {
+        $(this).popover('hide');
+    });
+</script>
