--- a/application/modules/default/views/scripts/community/index.phtml
+++ b/application/modules/default/views/scripts/community/index.phtml
@@ -27,6 +27,9 @@ $helperImage = new Default_View_Helper_Image();
 $modelInfo = new Default_Model_Info();
 $users = $modelInfo->getNewActiveMembers(12);
 
+$topusers = $modelInfo->getTopScoreUsers(100);
+
+
 $recentDonations = new Default_View_Helper_FetchRecentDonations();
 $donations = $recentDonations->fetchRecentDonations($limit = 12);
 
@@ -90,14 +93,13 @@ $totalAMountSupported = new Default_View_Helper_FetchTotalAmountSupported();
                 <ul class="nav nav-tabs">
                     <li class="active"><a href="#recentDonationsPanel" data-toggle="tab"><?= $this->translate('Recent Donations') ?></a></li>
                     <li><a href="#newMemberPanel" data-toggle="tab"><?= $this->translate('New Members') ?></a></li>
+                    <li><a href="#topMemberPanel" data-toggle="tab"><?= $this->translate('Top Members') ?></a></li>
                 </ul>
             </div>
         
         <div class="tab-content" id="communityPanels">
             <div class="row tab-pane active"  id="recentDonationsPanel">
-                <div class="list col-lg-10 col-md-10 col-sm-10 col-xs-10 " id="top-supporters">
-
-                   
+                <div class="list col-lg-10 col-md-10 col-sm-10 col-xs-10 " id="top-supporters">                   
                     <?php foreach ($donations as $key => $user) {
                         $age = $humanTiming->humanTiming($user['create_time']);
                         ?>
@@ -122,9 +124,9 @@ $totalAMountSupported = new Default_View_Helper_FetchTotalAmountSupported();
 
                     <?php } ?>
 
-                </div>
-               
+                </div>               
             </div> <!-- end row -->
+
             <div class="row tab-pane" id="newMemberPanel">
                 <div class="list col-lg-10 col-md-10 col-sm-10 col-xs-10 "
                      id="new-members">
@@ -150,7 +152,32 @@ $totalAMountSupported = new Default_View_Helper_FetchTotalAmountSupported();
                 </div>
             </div> <!-- end row -->
 
+
+            <div class="row tab-pane" id="topMemberPanel">
+                    <div class="list col-lg-10 col-md-10 col-sm-10 col-xs-10 ">
+                        <?php foreach ($topusers as $key => $user) {                      
+                            ?>
+                            <div class="user col-lg-1 col-md-2 col-sm-2 col-xs-2">
+                                <div class="u-wrap">
+                                    <a href="<?php echo $buildMemberUrl->buildMemberUrl($user['member_id']); ?>">
+                                        <figure >
+                                            <img src="<?php echo $helperImage->Image($user['profile_image_url'], array('width' => '200', 'height' => '200', 'crop' => 2)); ?>"/>
+                                        </figure>
+                                        <h3 class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><?php echo $user['username']; ?></h3>
+
+                                        <p class="small"><b><?= $user['score'] ?></b> </p>
+                                    </a>
+                                </div>
+                            </div>
+
+                        <?php } ?>
+                    </div>
+                </div> <!-- end row -->
+
+
         </div>
+
+       
         </section>
 
     </section>
