--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1704,6 +1704,17 @@ ul.meta-nav-top
                   color: #444;
               }
 
+              span.rank {
+                  font-size: 14px;
+                  position: absolute;
+                  bottom: 0;
+                  left: 0;
+                  width: 100%;
+                  margin: 0;                            
+                  color: #444;
+                  font-weight: bold;
+              }
+
             }
           }
         }
