--- a/application/modules/default/views/scripts/home/index-opendesktop.phtml
+++ b/application/modules/default/views/scripts/home/index-opendesktop.phtml
@@ -22,9 +22,9 @@
 
 $modelInfo = new Default_Model_Info();
 $this->comments = $modelInfo->getLatestComments(10);
-$this->users = $modelInfo->getNewActiveMembers(18);
-$this->supporters = $modelInfo->getNewActiveSupporters(9);
-$this->plingproducts = $modelInfo->getNewActivePlingProduct(9);
+//$this->users = $modelInfo->getNewActiveMembers(18);
+//$this->supporters = $modelInfo->getNewActiveSupporters(9);
+//$this->plingproducts = $modelInfo->getNewActivePlingProduct(9);
 $this->productsThemesGTK = $modelInfo->getLastProductsForHostStores(5,"366,363,273,267,138,125,131,153,154,414,133");
 $this->productsThemesPlasma = $modelInfo->getLastProductsForHostStores(5,"365,119,123,266,114,118,349,417,101,100,111,422,423,446,417");
 $this->productsWindowmanager = $modelInfo->getLastProductsForHostStores(5,"117,267,139,143,142,140,141,144");
@@ -139,6 +139,8 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
                          ?>                                         
                         </div>
 
+                        <?php /*
+
                         <div class="row blockpadding supportersrow">
                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                             <?php                                 
@@ -173,7 +175,10 @@ $helpPrintDate = new Default_View_Helper_PrintDate();
                                         );                   
                             ?>                                               
                             </div>
-                        </div>                        
+                        </div>   
+
+                        */
+                        ?>                     
              </div>
 </div>
 <div class="GridFlex-cell sidebar-right">   
