--- a/application/modules/default/views/scripts/home/partials/common_rightsidebar.phtml
+++ b/application/modules/default/views/scripts/home/partials/common_rightsidebar.phtml
@@ -19,6 +19,8 @@
  *    You should have received a copy of the GNU Affero General Public License
  *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  **/
+$modelInfo = new Default_Model_Info();
+$this->supporters = $modelInfo->getNewActiveSupporters(9);
 ?>
 
         <div class="downloadDiv" >
