--- a/application/modules/default/views/scripts/user/plings.phtml
+++ b/application/modules/default/views/scripts/user/plings.phtml
@@ -42,7 +42,7 @@ $this->countDownloadsOverall = count($this->downloads);
                 <?php
                     $member = $this->view_member;
                     if($member->pling_excluded == 1) {
-                        echo "<br><br><br><h1 style='color: red; '>This account has been excluded from receiving plings, doe to various misuses.</h1>";
+                        echo "<br><br><br><h1 style='color: red; '>This account has been excluded from receiving plings, due to various misuses.</h1>";
                     }
                 ?>
                 </div>
