--- a/application/modules/default/views/scripts/community/index.phtml
+++ b/application/modules/default/views/scripts/community/index.phtml
@@ -21,20 +21,16 @@
  **/
 
 $helperImage = new Default_View_Helper_Image();
-//$newUsers = new Default_View_Helper_NewUsers();
-//$users = $newUsers->newUsers($limit = 12);
-
 $modelInfo = new Default_Model_Info();
-$users = $modelInfo->getNewActiveMembers(12);
-
-$recentDonations = new Default_View_Helper_FetchRecentDonations();
-$donations = $recentDonations->fetchRecentDonations($limit = 12);
+$users = $modelInfo->getNewActiveMembers(100);
+$topusers = $modelInfo->getTopScoreUsers(100);
+$supporters = $modelInfo->getNewActiveSupporters(100);
+$plingproducts = $modelInfo->getNewActivePlingProduct(100);
 
 $buildMemberUrl = new Default_View_Helper_BuildMemberUrl();
-$humanTiming = new Default_View_Helper_HumanTiming();
 $buildProductUrl = new Default_View_Helper_BuildProductUrl();
 $membersCount = new Default_View_Helper_FetchTotalMembersCount();
-$totalAMountSupported = new Default_View_Helper_FetchTotalAmountSupported();
+//$totalAMountSupported = new Default_View_Helper_FetchTotalAmountSupported();
 
 ?>
 <main id="community-page">
@@ -60,11 +56,7 @@ $totalAMountSupported = new Default_View_Helper_FetchTotalAmountSupported();
 
                         <div class="large"><?= $membersCount->fetchTotalMembersCount() ?></div>
                         <div class="small margin-bottom-10">members</div>
-                        <?php /*
-                        <div class="small">Donating a total of</div>
-                        <div class="large">$<?= $totalAMountSupported->fetchTotalAmountSupported() ?></div>
-                        */
-                        ?>
+                       
                     </div>
 
                     <div class="bottom">
@@ -88,59 +80,34 @@ $totalAMountSupported = new Default_View_Helper_FetchTotalAmountSupported();
 
             <div id="community-tabs" style="margin-bottom:20px;">
                 <ul class="nav nav-tabs">
-                    <li class="active"><a href="#recentDonationsPanel" data-toggle="tab"><?= $this->translate('Recent Donations') ?></a></li>
-                    <li><a href="#newMemberPanel" data-toggle="tab"><?= $this->translate('New Members') ?></a></li>
+                  
+                    <li class="active"><a href="#newMemberPanel" data-toggle="tab"><?= $this->translate('New Members') ?></a></li>
+                    <li><a href="#topMemberPanel" data-toggle="tab"><?= $this->translate('Top Members') ?></a></li>
+                    <li><a href="#supportersPanel" data-toggle="tab"><?= $this->translate('Latest Supporters') ?></a></li>
+                    <li><a href="#plingedproductsPanel" data-toggle="tab"><?= $this->translate('Recently plinged Products ') ?></a></li>
+                    
                 </ul>
             </div>
         
         <div class="tab-content" id="communityPanels">
-            <div class="row tab-pane active"  id="recentDonationsPanel">
-                <div class="list col-lg-10 col-md-10 col-sm-10 col-xs-10 " id="top-supporters">
+           
+           
 
-                   
-                    <?php foreach ($donations as $key => $user) {
-                        $age = $humanTiming->humanTiming($user['create_time']);
-                        ?>
-
-                        <div class="user col-lg-1 col-md-4 col-sm-4 col-xs-4">
-                            <div class="u-wrap">
-                                <a href="<?= $buildProductUrl->buildProductUrl($user['project_id'], '') ?>">
-                                    <figure class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                        <img src="<?php echo $user['profile_image_url']; ?>"/>
-                                    </figure>
-                                    <h3 class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><?php echo $user['username']; ?></h3>
-
-                                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 u-content">
-                                        <span><?= $this->translate('supported') ?>
-                                            <b><?= $this->truncate($user['title'], 25) ?></b></span>
-                                        <span><?= $this->translate('with') ?> <b>$<?= $user['amount'] ?></b></span>
-                                    </div>
-                                    <p class="small"><b><?= $age['age'] ?></b> <?= $age['unit'] ?></p>
-                                </a>
-                            </div>
-                        </div>
-
-                    <?php } ?>
-
-                </div>
-               
-            </div> <!-- end row -->
-            <div class="row tab-pane" id="newMemberPanel">
-                <div class="list col-lg-10 col-md-10 col-sm-10 col-xs-10 "
+            <div class="row tab-pane active" id="newMemberPanel">
+                <div class="list"
                      id="new-members">
-                    <?php foreach ($users as $key => $user) {
-                        $age = $humanTiming->humanTiming($user['created_at']);
+                    <?php foreach ($users as $key => $user) {                      
                         ?>
 
-                        <div class="user col-lg-1 col-md-2 col-sm-2 col-xs-2">
+                        <div class="user">
                             <div class="u-wrap">
                                 <a href="<?php echo $buildMemberUrl->buildMemberUrl($user['member_id']); ?>">
                                     <figure >
-                                        <img src="<?php echo $helperImage->Image($user['profile_image_url'], array('width' => '200', 'height' => '200', 'crop' => 2)); ?>"/>
+                                        <img class="tooltipuser" data-tooltip-content="#tooltip_content" data-user="<?=$user['member_id']?>" src="<?php echo $helperImage->Image($user['profile_image_url'], array('width' => '200', 'height' => '200', 'crop' => 2)); ?>"/>
                                     </figure>
                                     <h3 class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><?php echo $user['username']; ?></h3>
 
-                                    <p class="small"><b><?= $age['age'] ?></b> <?= $age['unit'] ?></p>
+                                    <span class="small"><?= $this->printDate($user['created_at'])?><span class="small">
                                 </a>
                             </div>
                         </div>
@@ -150,9 +117,121 @@ $totalAMountSupported = new Default_View_Helper_FetchTotalAmountSupported();
                 </div>
             </div> <!-- end row -->
 
+
+            <div class="row tab-pane" id="topMemberPanel">
+                    <div class="list  ">
+                        <?php 
+                        $nr = 1;
+                        foreach ($topusers as $key => $user) {                      
+                            ?>
+                            <div class="user ">
+                                <div class="u-wrap" >
+                                    <a href="<?php echo $buildMemberUrl->buildMemberUrl($user['member_id']); ?>">
+                                        <figure >
+                                            <img class="tooltipuser" data-tooltip-content="#tooltip_content" data-user="<?=$user['member_id']?>" src="<?php echo $helperImage->Image($user['profile_image_url'], array('width' => '200', 'height' => '200', 'crop' => 2)); ?>"/>
+                                        </figure>
+                                        <h3 class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><?php echo $user['username']; ?></h3>                                        
+                                        <span class="rank">#<?=$nr++?></span>
+                                           <span class="small"><?=number_format($user['score'],0,'.',',') ?><span class="small">                                                                 
+                                    </a>
+                                </div>
+                            </div>
+
+                        <?php } ?>
+                    </div>
+                </div> <!-- end row -->
+
+
+                <div class="row tab-pane" id="supportersPanel">
+                        <div class="list  ">
+                                    <?php                                        
+                                       foreach ($supporters as $key => $user) {                      
+                                           ?>
+                                           <div class="user ">
+                                               <div class="u-wrap" >
+                                                   <a href="<?php echo $buildMemberUrl->buildMemberUrl($user['member_id']); ?>">
+                                                       <figure >
+                                                           <img class="tooltipuser" data-tooltip-content="#tooltip_content" data-user="<?=$user['member_id']?>"  src="<?php echo $helperImage->Image($user['profile_image_url'], array('width' => '200', 'height' => '200', 'crop' => 2)); ?>"/>
+                                                       </figure>
+                                                       <h3 class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><?php echo $user['username']; ?></h3>                                                                                                      
+                                                           <span class="small"><?= $this->printDate($user['created_at'])?><span class="small">                                                                                    
+                                                   </a>
+                                               </div>
+                                           </div>
+                                    <?php } ?>           
+                        </div>
+                </div> <!-- end row -->
+
+                 <div class="row tab-pane" id="plingedproductsPanel">
+                        <div class="list ">
+                                  <?php 
+                                              foreach ($plingproducts as $p) {                                  
+                                          ?>
+                                              <div class="user " >
+                                                  <div class="u-wrap" style=" background-repeat: no-repeat; background-image: url('<?php echo $this->Image($p['image_small'], array('width' => '115', 'height' => '75', 'crop' => 2)); ?>');">                
+                                                      <a href="<?php echo $this->buildProductUrl($p['project_id']); ?>" style="" >
+                                                          <div  class="product-thumbnail-startpage " style="height: 50px;width: 115px;"
+                                                                   data-toggle="popover"
+                                                                   data-trigger="hover"
+                                                                   data-html="true"
+                                                                   data-placement="top"
+                                                                  data-content="<div class='profile-img-product center'>
+                                                                       <img class='imgpopover'  src='<?php echo $this->Image($p['image_small'], array('width' => '200', 'height' => '160', 'crop' => 1)); ?>'/>
+                                                                       </div>
+                                                                         <div class='content'>
+                                                                             <div class='title'>
+                                                                                 <p><?=Default_Model_HtmlPurify::purify($this->truncate($p['title'],20).' - '.$this->truncate($p['catTitle'],20) )?></p>
+                                                                             </div>                                                             
+                                                                         </div>">         
+                                                          </div>         
+                                                          <figure style="">                            
+                                                              <img class="tooltipuser" data-tooltip-content="#tooltip_content" data-user="<?=$p['member_id']?>" 
+                                                                      src="<?php echo $this->Image($p['profile_image_url'], array('width' => '50', 'height' => '50', 'crop' => 2)); ?>" 
+                                                                      style="width:40px; height: 40px"                                   
+                                                                      />
+                                                          </figure>
+                                                          <h3 class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><?php echo Default_Model_HtmlPurify::purify($p['username']); ?></h3>
+                                                                                                    
+                                                      </a>
+                                                       <span class="small created_at" >
+                                                          <a class="tooltipuserplings" data-tooltip-content="#tooltip_content" data-user="<?=$p['project_id']?>" ><img src="/images/system/pling-btn-active.png" style="width: 15px; height: 15px" /> </a>
+                                                          <?=$p['sum_plings']; ?>
+                                                       </span>
+                                                  </div>
+                                              </div>
+                                      <?php } ?>        
+                        </div>
+                </div> <!-- end row -->
+
+
         </div>
+
+       
         </section>
 
     </section>
-
+<div class="tooltip_templates" style="display: none">
+    <span id="tooltip_content">
+        <i class="fa fa-spinner"></i>
+    </span>
+</div>
 </main>
+
+<script type="application/javascript">
+    // tool tips
+    $('body').on('mouseenter', '.product-thumbnail-startpage', function () {
+        $(this).popover('show');
+    });
+
+    $('body').on('mouseleave', '.product-thumbnail-startpage', function () {
+        $(this).popover('hide');
+    });
+</script>
+
+<?php $this->inlineScript()->appendScript(
+    '    $(document).ready(function(){                                             
+                TooltipUser.setup("tooltipuser","right");
+                TooltipUser.setup("tooltipuserleft","left");             
+                TooltipUserPlings.setup("tooltipuserplings","right");
+            });
+        ');
