--- a/application/modules/default/views/scripts/community/index.phtml
+++ b/application/modules/default/views/scripts/community/index.phtml
@@ -52,7 +52,7 @@ $membersCount = new Default_View_Helper_FetchTotalMembersCount();
 
                     <div class="top">
                         <div class="large"><?= $membersCount->fetchActiveMembersInStoreCount($this->categories) ?></div>
-                        <div class="small margin-bottom-10">support</div>
+                        <div class="small margin-bottom-10">contributors of</div>
 
                         <div class="large"><?= $membersCount->fetchTotalMembersCount() ?></div>
                         <div class="small margin-bottom-10">members</div>
