--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1663,7 +1663,7 @@ ul.meta-nav-top
                       -ms-transition: all 0.2s ease-out;
                       -o-transition: all 0.2s ease-out;
                       position: relative;
-
+                      text-align: center;
                       figure {
                         float: left;
                         padding: .25em;
